...
 *
 * @param forecastResultSet the [ForecastResultSet] to display data for
 */
@Composable
fun ForecastScreenContent(forecastResultSet: ForecastResultSet) {
    Column {
        Text(forecastResultSet.location, modifier = Modifier.testTag("locationFound"))
        Text(
            forecastResultSet.publicationTime.format(DateTimeFormatter.RFC_1123_DATE_TIME),
            modifier = Modifier.testTag("publicationTime"),
        )

        var tabIndex by rememberSaveable { mutableIntStateOf(0) }
        val tabTitleResources = listOf(R.string.daily, R.string.hourly)
        PrimaryScrollableTabRow(tabIndex, modifier = Modifier.padding(top = 4.dp), edgePadding = 0.dp) {
            tabTitleResources.forEachIndexed { index, titleRes ->
...
